--- a/docs/documentation/components/EditorComponent.html
+++ b/docs/documentation/components/EditorComponent.html
@@ -136,16 +136,7 @@
                                     <a href="../classes/DataGridHeaderModel.html" >DataGridHeaderModel</a>
                                 </li>
                                 <li class="link">
-                                    <a href="../classes/DataGridItemModel.html" >DataGridItemModel</a>
-                                </li>
-                                <li class="link">
                                     <a href="../classes/DataGridModel.html" >DataGridModel</a>
-                                </li>
-                                <li class="link">
-                                    <a href="../classes/DynamicHTMLOptions.html" >DynamicHTMLOptions</a>
-                                </li>
-                                <li class="link">
-                                    <a href="../classes/OnMount.html" >OnMount</a>
                                 </li>
                                 <li class="link">
                                     <a href="../classes/TextTreeNodeModel.html" >TextTreeNodeModel</a>
@@ -174,9 +165,6 @@
                                 id="xs-injectables-links"
                             >
                                 <li class="link">
-                                    <a href="../injectables/DynamicHtmlRendererService.html" >DynamicHtmlRendererService</a>
-                                </li>
-                                <li class="link">
                                     <a href="../injectables/FormValidatorFromJsonService.html" >FormValidatorFromJsonService</a>
                                 </li>
                                 <li class="link">
@@ -203,13 +191,7 @@
                                     <a href="../interfaces/Array.html" >Array</a>
                                 </li>
                                 <li class="link">
-                                    <a href="../interfaces/ComponentWithSelector.html" >ComponentWithSelector</a>
-                                </li>
-                                <li class="link">
                                     <a href="../interfaces/DatagridStyles.html" >DatagridStyles</a>
-                                </li>
-                                <li class="link">
-                                    <a href="../interfaces/DynamicHTMLRef.html" >DynamicHTMLRef</a>
                                 </li>
                                 <li class="link">
                                     <a href="../interfaces/FormValidatorModel.html" >FormValidatorModel</a>
@@ -404,16 +386,7 @@
                                            <a href="../classes/DataGridHeaderModel.html" >DataGridHeaderModel</a>
                                        </li>
                                        <li class="link">
-                                           <a href="../classes/DataGridItemModel.html" >DataGridItemModel</a>
-                                       </li>
-                                       <li class="link">
                                            <a href="../classes/DataGridModel.html" >DataGridModel</a>
-                                       </li>
-                                       <li class="link">
-                                           <a href="../classes/DynamicHTMLOptions.html" >DynamicHTMLOptions</a>
-                                       </li>
-                                       <li class="link">
-                                           <a href="../classes/OnMount.html" >OnMount</a>
                                        </li>
                                        <li class="link">
                                            <a href="../classes/TextTreeNodeModel.html" >TextTreeNodeModel</a>
@@ -442,9 +415,6 @@
                                        id="injectables-links"
                    >
                                        <li class="link">
-                                           <a href="../injectables/DynamicHtmlRendererService.html" >DynamicHtmlRendererService</a>
-                                       </li>
-                                       <li class="link">
                                            <a href="../injectables/FormValidatorFromJsonService.html" >FormValidatorFromJsonService</a>
                                        </li>
                                        <li class="link">
@@ -471,13 +441,7 @@
                                            <a href="../interfaces/Array.html" >Array</a>
                                        </li>
                                        <li class="link">
-                                           <a href="../interfaces/ComponentWithSelector.html" >ComponentWithSelector</a>
-                                       </li>
-                                       <li class="link">
                                            <a href="../interfaces/DatagridStyles.html" >DatagridStyles</a>
-                                       </li>
-                                       <li class="link">
-                                           <a href="../interfaces/DynamicHTMLRef.html" >DynamicHTMLRef</a>
                                        </li>
                                        <li class="link">
                                            <a href="../interfaces/FormValidatorModel.html" >FormValidatorModel</a>
@@ -706,6 +670,9 @@
                                 <a href="#enumValues">enumValues</a>
                             </li>
                             <li>
+                                <a href="#formGroup">formGroup</a>
+                            </li>
+                            <li>
                                 <a href="#fromValue">fromValue</a>
                             </li>
                             <li>
@@ -734,9 +701,6 @@
                             </li>
                             <li>
                                 <a href="#type">type</a>
-                            </li>
-                            <li>
-                                <a href="#userForm">userForm</a>
                             </li>
                             <li>
                                 <a href="#value">value</a>
@@ -791,6 +755,29 @@
                             <tr>
                                 <td class="col-md-2" colspan="2">
                                     <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:60</a></div>
+                                </td>
+                            </tr>
+                </tbody>
+            </table>
+            <table class="table table-sm table-bordered">
+                <tbody>
+                    <tr>
+                        <td class="col-md-2">
+                            <a name="formGroup"></a>
+                            <code>formGroup</code>
+                        </td>
+                        <td class="col-md-10">
+                            <div><p>The form&#39;s group object.</p>
+</div>
+                              <p>
+                                <em>Type:</em>    <code><a href="https://angular.io/docs/ts/latest/api/forms/index/FormGroup-class.html" target="_blank" >FormGroup</a></code>
+
+                              </p>
+                        </td>
+                    </tr>
+                            <tr>
+                                <td class="col-md-2" colspan="2">
+                                    <div class="io-line">Defined in <a href="" data-line="51" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:51</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -1017,29 +1004,6 @@ The value shall be an Array that a <code>*ngFor</code> directive can execute.</p
                             <tr>
                                 <td class="col-md-2" colspan="2">
                                     <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:35</a></div>
-                                </td>
-                            </tr>
-                </tbody>
-            </table>
-            <table class="table table-sm table-bordered">
-                <tbody>
-                    <tr>
-                        <td class="col-md-2">
-                            <a name="userForm"></a>
-                            <code>userForm</code>
-                        </td>
-                        <td class="col-md-10">
-                            <div><p>The form&#39;s group object.</p>
-</div>
-                              <p>
-                                <em>Type:</em>    <code><a href="https://angular.io/docs/ts/latest/api/forms/index/FormGroup-class.html" target="_blank" >FormGroup</a></code>
-
-                              </p>
-                        </td>
-                    </tr>
-                            <tr>
-                                <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="51" class="link-to-prism">projects/svogv/src/lib/widgets/editors/editor/editor.component.ts:51</a></div>
                                 </td>
                             </tr>
                 </tbody>
@@ -1441,7 +1405,7 @@ export class EditorComponent implements OnInit {
   /**
    * The form&#x27;s group object.
    */
-  @Input() userForm: FormGroup;
+  @Input() formGroup: FormGroup;
   /**
    * If set to true the label and the field appears in one row.
    * Otherwise the label is above the field. Default is &#x60;true&#x60;.
@@ -1506,9 +1470,9 @@ export class EditorComponent implements OnInit {
   }
 
   ngOnInit() {
-    this.userForm.valueChanges.subscribe(data &#x3D;&gt; this.onValueChanged(data));
+    this.formGroup.valueChanges.subscribe(data &#x3D;&gt; this.onValueChanged(data));
     // this is set by FormValidatorService
-    const editorModel &#x3D; (&lt;any&gt;this.userForm)[&#x27;__editorModel__&#x27;];
+    const editorModel &#x3D; (&lt;any&gt;this.formGroup)[&#x27;__editorModel__&#x27;];
     // get type from form
     if (editorModel) {
       // get elementary types, this might get overwritten later according to decorators found
@@ -1563,7 +1527,7 @@ export class EditorComponent implements OnInit {
     // check validation on change
     this.errors &#x3D; new Array&lt;string&gt;();
     // tslint:disable-next-line:forin
-    for (const error in this.userForm.controls[this.name].errors) {
+    for (const error in this.formGroup.controls[this.name].errors) {
       this.errors.push(error);
     }
   }
@@ -1573,9 +1537,9 @@ export class EditorComponent implements OnInit {
 
     <div class="tab-pane fade" id="templateData">
         <pre class="line-numbers"><code class="language-html">&lt;div class&#x3D;&quot;form-group row&quot;
-    [formGroup]&#x3D;&quot;userForm&quot;
-     *ngIf&#x3D;&quot;type !&#x3D; &#x27;hidden&#x27; &amp;&amp; userForm&quot;
-     [ngClass]&#x3D;&quot;{ &#x27;has-danger&#x27;: !userForm.controls[name].valid &amp;&amp; userForm.controls[name].touched }&quot;&gt;
+    [formGroup]&#x3D;&quot;formGroup&quot;
+     *ngIf&#x3D;&quot;type !&#x3D; &#x27;hidden&#x27; &amp;&amp; formGroup&quot;
+     [ngClass]&#x3D;&quot;{ &#x27;has-danger&#x27;: !formGroup.controls[name].valid &amp;&amp; formGroup.controls[name].touched }&quot;&gt;
   &lt;label class&#x3D;&quot;col-form-label col-md-3 col-sm-10&quot;
     [attr.for]&#x3D;&quot;name&quot;
     [attr.title]&#x3D;&quot;tooltip&quot; &gt;{{ label }}{{ labelDivider }} &lt;/label&gt;
@@ -1634,10 +1598,10 @@ export class EditorComponent implements OnInit {
         &lt;ng-content&gt;&lt;/ng-content&gt;
     &lt;/ng-container&gt;
     &lt;span class&#x3D;&quot;fa fa-warning text-danger form-control-feedback&quot;
-        [hidden]&#x3D;&quot;userForm.controls[name].valid || userForm.controls[name].pristine&quot;&gt;&lt;/span&gt;
+        [hidden]&#x3D;&quot;formGroup.controls[name].valid || formGroup.controls[name].pristine&quot;&gt;&lt;/span&gt;
     &lt;small class&#x3D;&quot;text-danger&quot;
-        [hidden]&#x3D;&quot;userForm.controls[name].valid || userForm.controls[name].pristine&quot;&gt;
-    &lt;span *ngFor&#x3D;&quot;let error of errors&quot;&gt;{{ userForm.controls[name][&#x27;messages&#x27;][error] }}&lt;/span&gt;
+        [hidden]&#x3D;&quot;formGroup.controls[name].valid || formGroup.controls[name].pristine&quot;&gt;
+    &lt;span *ngFor&#x3D;&quot;let error of errors&quot;&gt;{{ formGroup.controls[name][&#x27;messages&#x27;][error] }}&lt;/span&gt;
     &lt;/small&gt;
   &lt;/div&gt;
 &lt;/div&gt;
@@ -1670,7 +1634,7 @@ export class EditorComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div class="form-group row"    [formGroup]="userForm"     *ngIf="type != \'hidden\' && userForm"     [ngClass]="{ \'has-danger\': !userForm.controls[name].valid && userForm.controls[name].touched }">  <label class="col-form-label col-md-3 col-sm-10"    [attr.for]="name"    [attr.title]="tooltip" >{{ label }}{{ labelDivider }} </label>  <div [ngClass]="{ \'col-md-7 col-sm-10\': inline }">    <textarea *ngIf="type == \'textarea\'"            class="form-control"            [id]="name"            [readOnly]=\'readonly\'            [formControlName]="name"            [attr.rows]="getParams(\'rows\')"            [attr.cols]="getParams(\'cols\')">    </textarea>    <select *ngIf="type == \'enum\' && enumValues" class="form-control" [id]="name"          [formControlName]="name" [disabled]=\'readonly\'>      <option *ngFor="let option of enumValues" [value]="option.key">{{option.val}}</option>    </select>    <select *ngIf="type == \'list\' && listValues" class="form-control" [id]="name"          [formControlName]="name" [disabled]=\'readonly\'>      <option *ngFor="let option of listValues" [value]="option.key">{{option.val}}</option>    </select>    <input *ngIf="type == \'range\'" type="range"        class="form-control"        [placeholder]="waterMark"        [attr.minvalue]="fromValue"        [attr.maxvalue]="toValue"        [attr.min]="fromValue"        [attr.max]="toValue"        [id]="name"        [formControlName]="name"        [title]="tooltip" />    <input *ngIf="type == \'calendar\'" type="date"        class="form-control"        [placeholder]="waterMark"        [readOnly]=\'readonly\'        [id]="name"        [formControlName]="name"        [title]="tooltip" />    <input *ngIf="type == \'number\'" type="number"        class="form-control"        [placeholder]="waterMark"        [readOnly]=\'readonly\'        [id]="name"        [formControlName]="name"        [title]="tooltip" />    <input *ngIf="type == \'boolean\'" type="checkbox"        class="form-control"        [readOnly]=\'readonly\'        [id]="name"        [formControlName]="name"        [title]="tooltip" />    <label *ngIf="type == \'boolean\'" [attr.for]="name"></label>    <input *ngIf="type == \'text\' || type == \'\'" [placeholder]="waterMark"        [readOnly]=\'readonly\'        type="text" class="form-control" [id]="name" [formControlName]="name" />    <ng-container *ngIf="type == \'template\'">        <ng-content></ng-content>    </ng-container>    <span class="fa fa-warning text-danger form-control-feedback"        [hidden]="userForm.controls[name].valid || userForm.controls[name].pristine"></span>    <small class="text-danger"        [hidden]="userForm.controls[name].valid || userForm.controls[name].pristine">    <span *ngFor="let error of errors">{{ userForm.controls[name][\'messages\'][error] }}</span>    </small>  </div></div><div>  <input *ngIf="type == \'hidden\'" [id]="name" [formControlName]="name" type="hidden" /></div></div>'
+        var COMPONENT_TEMPLATE = '<div><div class="form-group row"    [formGroup]="formGroup"     *ngIf="type != \'hidden\' && formGroup"     [ngClass]="{ \'has-danger\': !formGroup.controls[name].valid && formGroup.controls[name].touched }">  <label class="col-form-label col-md-3 col-sm-10"    [attr.for]="name"    [attr.title]="tooltip" >{{ label }}{{ labelDivider }} </label>  <div [ngClass]="{ \'col-md-7 col-sm-10\': inline }">    <textarea *ngIf="type == \'textarea\'"            class="form-control"            [id]="name"            [readOnly]=\'readonly\'            [formControlName]="name"            [attr.rows]="getParams(\'rows\')"            [attr.cols]="getParams(\'cols\')">    </textarea>    <select *ngIf="type == \'enum\' && enumValues" class="form-control" [id]="name"          [formControlName]="name" [disabled]=\'readonly\'>      <option *ngFor="let option of enumValues" [value]="option.key">{{option.val}}</option>    </select>    <select *ngIf="type == \'list\' && listValues" class="form-control" [id]="name"          [formControlName]="name" [disabled]=\'readonly\'>      <option *ngFor="let option of listValues" [value]="option.key">{{option.val}}</option>    </select>    <input *ngIf="type == \'range\'" type="range"        class="form-control"        [placeholder]="waterMark"        [attr.minvalue]="fromValue"        [attr.maxvalue]="toValue"        [attr.min]="fromValue"        [attr.max]="toValue"        [id]="name"        [formControlName]="name"        [title]="tooltip" />    <input *ngIf="type == \'calendar\'" type="date"        class="form-control"        [placeholder]="waterMark"        [readOnly]=\'readonly\'        [id]="name"        [formControlName]="name"        [title]="tooltip" />    <input *ngIf="type == \'number\'" type="number"        class="form-control"        [placeholder]="waterMark"        [readOnly]=\'readonly\'        [id]="name"        [formControlName]="name"        [title]="tooltip" />    <input *ngIf="type == \'boolean\'" type="checkbox"        class="form-control"        [readOnly]=\'readonly\'        [id]="name"        [formControlName]="name"        [title]="tooltip" />    <label *ngIf="type == \'boolean\'" [attr.for]="name"></label>    <input *ngIf="type == \'text\' || type == \'\'" [placeholder]="waterMark"        [readOnly]=\'readonly\'        type="text" class="form-control" [id]="name" [formControlName]="name" />    <ng-container *ngIf="type == \'template\'">        <ng-content></ng-content>    </ng-container>    <span class="fa fa-warning text-danger form-control-feedback"        [hidden]="formGroup.controls[name].valid || formGroup.controls[name].pristine"></span>    <small class="text-danger"        [hidden]="formGroup.controls[name].valid || formGroup.controls[name].pristine">    <span *ngFor="let error of errors">{{ formGroup.controls[name][\'messages\'][error] }}</span>    </small>  </div></div><div>  <input *ngIf="type == \'hidden\'" [id]="name" [formControlName]="name" type="hidden" /></div></div>'
     var COMPONENTS = [{'name': 'AutoFormComponent', 'selector': 'ac-autoform'},{'name': 'DataGridComponent', 'selector': 'ac-datagrid'},{'name': 'DataGridPaginationComponent', 'selector': 'ac-datagrid-pagination'},{'name': 'EditorComponent', 'selector': 'ac-editor'},{'name': 'TreeViewComponent', 'selector': 'ac-tree'},{'name': 'TreeViewNodeComponent', 'selector': 'ac-treenode'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'EditorComponent'};
