--- a/docs/documentation/components/AutoFormComponent.html
+++ b/docs/documentation/components/AutoFormComponent.html
@@ -136,16 +136,7 @@
                                     <a href="../classes/DataGridHeaderModel.html" >DataGridHeaderModel</a>
                                 </li>
                                 <li class="link">
-                                    <a href="../classes/DataGridItemModel.html" >DataGridItemModel</a>
-                                </li>
-                                <li class="link">
                                     <a href="../classes/DataGridModel.html" >DataGridModel</a>
-                                </li>
-                                <li class="link">
-                                    <a href="../classes/DynamicHTMLOptions.html" >DynamicHTMLOptions</a>
-                                </li>
-                                <li class="link">
-                                    <a href="../classes/OnMount.html" >OnMount</a>
                                 </li>
                                 <li class="link">
                                     <a href="../classes/TextTreeNodeModel.html" >TextTreeNodeModel</a>
@@ -174,9 +165,6 @@
                                 id="xs-injectables-links"
                             >
                                 <li class="link">
-                                    <a href="../injectables/DynamicHtmlRendererService.html" >DynamicHtmlRendererService</a>
-                                </li>
-                                <li class="link">
                                     <a href="../injectables/FormValidatorFromJsonService.html" >FormValidatorFromJsonService</a>
                                 </li>
                                 <li class="link">
@@ -203,13 +191,7 @@
                                     <a href="../interfaces/Array.html" >Array</a>
                                 </li>
                                 <li class="link">
-                                    <a href="../interfaces/ComponentWithSelector.html" >ComponentWithSelector</a>
-                                </li>
-                                <li class="link">
                                     <a href="../interfaces/DatagridStyles.html" >DatagridStyles</a>
-                                </li>
-                                <li class="link">
-                                    <a href="../interfaces/DynamicHTMLRef.html" >DynamicHTMLRef</a>
                                 </li>
                                 <li class="link">
                                     <a href="../interfaces/FormValidatorModel.html" >FormValidatorModel</a>
@@ -404,16 +386,7 @@
                                            <a href="../classes/DataGridHeaderModel.html" >DataGridHeaderModel</a>
                                        </li>
                                        <li class="link">
-                                           <a href="../classes/DataGridItemModel.html" >DataGridItemModel</a>
-                                       </li>
-                                       <li class="link">
                                            <a href="../classes/DataGridModel.html" >DataGridModel</a>
-                                       </li>
-                                       <li class="link">
-                                           <a href="../classes/DynamicHTMLOptions.html" >DynamicHTMLOptions</a>
-                                       </li>
-                                       <li class="link">
-                                           <a href="../classes/OnMount.html" >OnMount</a>
                                        </li>
                                        <li class="link">
                                            <a href="../classes/TextTreeNodeModel.html" >TextTreeNodeModel</a>
@@ -442,9 +415,6 @@
                                        id="injectables-links"
                    >
                                        <li class="link">
-                                           <a href="../injectables/DynamicHtmlRendererService.html" >DynamicHtmlRendererService</a>
-                                       </li>
-                                       <li class="link">
                                            <a href="../injectables/FormValidatorFromJsonService.html" >FormValidatorFromJsonService</a>
                                        </li>
                                        <li class="link">
@@ -471,13 +441,7 @@
                                            <a href="../interfaces/Array.html" >Array</a>
                                        </li>
                                        <li class="link">
-                                           <a href="../interfaces/ComponentWithSelector.html" >ComponentWithSelector</a>
-                                       </li>
-                                       <li class="link">
                                            <a href="../interfaces/DatagridStyles.html" >DatagridStyles</a>
-                                       </li>
-                                       <li class="link">
-                                           <a href="../interfaces/DynamicHTMLRef.html" >DynamicHTMLRef</a>
                                        </li>
                                        <li class="link">
                                            <a href="../interfaces/FormValidatorModel.html" >FormValidatorModel</a>
@@ -1035,17 +999,18 @@ export class AutoFormComponent implements OnInit {
     <div class="tab-pane fade" id="templateData">
         <pre class="line-numbers"><code class="language-html">&lt;ng-content&gt;&lt;/ng-content&gt;
 &lt;ng-container *ngIf&#x3D;&quot;!ungroupedAfter&quot;&gt;
-  &lt;ac-editor *ngFor&#x3D;&quot;let editor of editors&quot; [name]&#x3D;&quot;editor.editor&quot; [userForm]&#x3D;&quot;formGroup&quot;&gt;&lt;/ac-editor&gt;
+  &lt;ac-editor *ngFor&#x3D;&quot;let editor of editors&quot; [name]&#x3D;&quot;editor.editor&quot; [formGroup]&#x3D;&quot;formGroup&quot;&gt;&lt;/ac-editor&gt;
 &lt;/ng-container&gt;
 &lt;ng-container *ngIf&#x3D;&quot;grouped()&quot;&gt;
   &lt;fieldset *ngFor&#x3D;&quot;let group of groups&quot;&gt;
     &lt;legend [attr.title]&#x3D;&quot;group.desc&quot; *ngIf&#x3D;&quot;group.name&quot;&gt;{{ group.name }}&lt;/legend&gt;
-    &lt;ac-editor *ngFor&#x3D;&quot;let editor of group.editors&quot; [name]&#x3D;&quot;editor.editor&quot; [userForm]&#x3D;&quot;formGroup&quot;&gt;&lt;/ac-editor&gt;
+    &lt;ac-editor *ngFor&#x3D;&quot;let editor of group.editors&quot; [name]&#x3D;&quot;editor.editor&quot; [formGroup]&#x3D;&quot;formGroup&quot;&gt;&lt;/ac-editor&gt;
   &lt;/fieldset&gt;
 &lt;/ng-container&gt;
 &lt;ng-container *ngIf&#x3D;&quot;ungroupedAfter&quot;&gt;
-  &lt;ac-editor *ngFor&#x3D;&quot;let editor of editors&quot; [name]&#x3D;&quot;editor.editor&quot; [userForm]&#x3D;&quot;formGroup&quot;&gt;&lt;/ac-editor&gt;
-&lt;/ng-container&gt;</code></pre>
+  &lt;ac-editor *ngFor&#x3D;&quot;let editor of editors&quot; [name]&#x3D;&quot;editor.editor&quot; [formGroup]&#x3D;&quot;formGroup&quot;&gt;&lt;/ac-editor&gt;
+&lt;/ng-container&gt;
+</code></pre>
     </div>
 
     <div class="tab-pane fade" id="tree">
@@ -1071,7 +1036,7 @@ export class AutoFormComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><ng-content></ng-content><ng-container *ngIf="!ungroupedAfter">  <ac-editor *ngFor="let editor of editors" [name]="editor.editor" [userForm]="formGroup"></ac-editor></ng-container><ng-container *ngIf="grouped()">  <fieldset *ngFor="let group of groups">    <legend [attr.title]="group.desc" *ngIf="group.name">{{ group.name }}</legend>    <ac-editor *ngFor="let editor of group.editors" [name]="editor.editor" [userForm]="formGroup"></ac-editor>  </fieldset></ng-container><ng-container *ngIf="ungroupedAfter">  <ac-editor *ngFor="let editor of editors" [name]="editor.editor" [userForm]="formGroup"></ac-editor></ng-container></div>'
+        var COMPONENT_TEMPLATE = '<div><ng-content></ng-content><ng-container *ngIf="!ungroupedAfter">  <ac-editor *ngFor="let editor of editors" [name]="editor.editor" [formGroup]="formGroup"></ac-editor></ng-container><ng-container *ngIf="grouped()">  <fieldset *ngFor="let group of groups">    <legend [attr.title]="group.desc" *ngIf="group.name">{{ group.name }}</legend>    <ac-editor *ngFor="let editor of group.editors" [name]="editor.editor" [formGroup]="formGroup"></ac-editor>  </fieldset></ng-container><ng-container *ngIf="ungroupedAfter">  <ac-editor *ngFor="let editor of editors" [name]="editor.editor" [formGroup]="formGroup"></ac-editor></ng-container></div>'
     var COMPONENTS = [{'name': 'AutoFormComponent', 'selector': 'ac-autoform'},{'name': 'DataGridComponent', 'selector': 'ac-datagrid'},{'name': 'DataGridPaginationComponent', 'selector': 'ac-datagrid-pagination'},{'name': 'EditorComponent', 'selector': 'ac-editor'},{'name': 'TreeViewComponent', 'selector': 'ac-tree'},{'name': 'TreeViewNodeComponent', 'selector': 'ac-treenode'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'AutoFormComponent'};
