--- a/src/app/components/widgetdemo/widgets/griddemo.component.html
+++ b/src/app/components/widgetdemo/widgets/griddemo.component.html
@@ -2,7 +2,8 @@
   <div class="row">
     <div class="col-12">
       <div class="alert alert-info">
-        Advanced features of the grid, such as changing column order, add/remove columns by user actions, callbacks, and more.
+        Advanced features of the grid, such as changing column order, add/remove
+        columns by user actions, callbacks, and more.
       </div>
     </div>
   </div>
@@ -18,9 +19,19 @@
             This demo shows:
           </p>
           <ul>
-            <li>Display action buttons. Currently the buttons 'Edit' and 'Delete' can be shown. They fire events that need to be handled to change the model accordingly.</li>
-            <li>Rearrange columns: Remove columns and add columns dynamically. Internally, it's just the hidden attribute that get set or removed. No change of the model at all.</li>
-            <li>Buttons and "Action" column's header can be named dynamically.</li>
+            <li>
+              Display action buttons. Currently the buttons 'Edit' and 'Delete'
+              can be shown. They fire events that need to be handled to change
+              the model accordingly.
+            </li>
+            <li>
+              Rearrange columns: Remove columns and add columns dynamically.
+              Internally, it's just the hidden attribute that get set or
+              removed. No change of the model at all.
+            </li>
+            <li>
+              Buttons and "Action" column's header can be named dynamically.
+            </li>
           </ul>
         </div>
       </div>
@@ -48,17 +59,26 @@
                 >&lt;/ac-datagrid>
     </pre
           >
-          <p>The values <code>showActions</code> and <code>reArrangeColumns</code> are being set by the checkboxes.</p>
+          <p>
+            The values <code>showActions</code> and
+            <code>reArrangeColumns</code> are being set by the checkboxes.
+          </p>
           <ul>
             <li>
-              <code>showActions</code>: Show the action button column, the buttons 'Edit' and 'Delete' fire appropriate events. The do actually not
-              change the data, one must manipulate the model accordingly.
+              <code>showActions</code>: Show the action button column, the
+              buttons 'Edit' and 'Delete' fire appropriate events. The do
+              actually not change the data, one must manipulate the model
+              accordingly.
             </li>
-            <li><code>reArrangeColumns</code>: Shows a remove button on the columns and allows adding columns dynamically.</li>
+            <li>
+              <code>reArrangeColumns</code>: Shows a remove button on the
+              columns and allows adding columns dynamically.
+            </li>
           </ul>
           <p>
-            The events are simply forwarded to an array to show how they work. There is no change of data. For more event examples see the editor demo
-            (Grid&Editors) in the menu on the left.
+            The events are simply forwarded to an array to show how they work.
+            There is no change of data. For more event examples see the editor
+            demo (Grid&Editors) in the menu on the left.
           </p>
         </div>
       </div>
@@ -71,42 +91,116 @@
         <form #f="ngForm" novalidate>
           <div class="form-check-inline">
             <label class="form-check-label">
-              <input class="form-check-input" type="checkbox" [(ngModel)]="showActions" checked="true" name="show" />
+              <input
+                class="form-check-input"
+                type="checkbox"
+                [(ngModel)]="showActions"
+                checked="true"
+                name="show"
+              />
               Show Action Column
             </label>
           </div>
           <div class="form-check-inline">
             <label class="form-check-label">
-              <input class="form-check-input" type="checkbox" [(ngModel)]="reArrangeColumns" checked="true" name="reArrange" />
+              <input
+                class="form-check-input"
+                type="checkbox"
+                [(ngModel)]="reArrangeColumns"
+                checked="true"
+                name="reArrange"
+              />
               Show Add/Remove Columns Button
             </label>
           </div>
           <div class="form-group-sm" *ngIf="showActions">
             <label for="actionHeader">Action Column's Header</label>
-            <input type="text" class="form-control form-control-sm" id="actionHeader" name="actionHeader" [(ngModel)]="actionHeader" >
+            <input
+              type="text"
+              class="form-control form-control-sm"
+              id="actionHeader"
+              name="actionHeader"
+              [(ngModel)]="actionHeader"
+            />
           </div>
           <div class="form-group-sm" *ngIf="showActions">
-              <label for="textDeleteButton">Text of Delete Button</label>
-              <input type="text" class="form-control form-control-sm" id="textDeleteButton" name="textDeleteButton" [(ngModel)]="textDeleteButton" >
-            </div>
-            <div class="form-group-sm" *ngIf="showActions">
-              <label for="textEditButton">Text of Edit Button</label>
-              <input type="text" class="form-control form-control-sm" id="textEditButton" name="textEditButton" [(ngModel)]="textEditButton" >
-            </div>
+            <label for="textDeleteButton">Text of Delete Button</label>
+            <input
+              type="text"
+              class="form-control form-control-sm"
+              id="textDeleteButton"
+              name="textDeleteButton"
+              [(ngModel)]="textDeleteButton"
+            />
+          </div>
+          <div class="form-group-sm" *ngIf="showActions">
+            <label for="textEditButton">Text of Edit Button</label>
+            <input
+              type="text"
+              class="form-control form-control-sm"
+              id="textEditButton"
+              name="textEditButton"
+              [(ngModel)]="textEditButton"
+            />
+          </div>
         </form>
       </fieldset>
       <fieldset>
         <legend>Events fired</legend>
-        <button type="button" (click)="gridEvents = []" class="btn btn-outline-secondary btn-xs" style="float:right">Clear List</button>
+        <button
+          type="button"
+          (click)="gridEvents = []"
+          class="btn btn-outline-secondary btn-xs"
+          style="float:right"
+        >
+          Clear List
+        </button>
         <div *ngFor="let ev of gridEvents">{{ ev }}</div>
       </fieldset>
-      <fieldset>
+      <fieldset *ngIf="reArrangeColumns">
         <legend>Currently invisible columns</legend>
-        <div>
-          Click to add:
-          <span *ngFor="let col of model.headersNotVisible; let l = last">
-            <button class="btn btn-xs btn-danger" (click)="model.addColumn(col.prop)">Add '{{ col.text }}'</button> </span
-          >&nbsp;
+        <div class="btn-group">
+          <button  appDropdown
+            class="btn btn-secondary dropdown-toggle"
+            type="button"
+            (click)="addMenu"
+            id="dropdownAdd"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            Add a column
+          </button>
+          <div class="dropdown-menu" >
+            <a
+              *ngFor="let col of model.headersNotVisible; let l = last"
+              (click)="model.addColumn(col.prop)"
+              class="dropdown-item"
+              href="#"
+            >
+              Add '{{ col.text }}'
+            </a>
+          </div>
+          <button appDropdown
+            class="btn btn-secondary dropdown-toggle"
+            type="button"
+            id="dropdownRemove"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            Remove a column
+          </button>
+          <div class="dropdown-menu">
+            <a
+              *ngFor="let header of model.headers"
+              (click)="model.removeColumn(header.prop)"
+              class="dropdown-item"
+              [ngStyle]="columnStyle ? columnStyle.headerRemoveButton : null"
+            >
+              {{ header.text }}
+            </a>
+          </div>
         </div>
       </fieldset>
       <ac-datagrid
